fixing the container application

--- a/components/app_component/app/views/app_component/welcome/index.html.slim
+++ b/components/app_component/app/views/app_component/welcome/index.html.slim
@@ -3,4 +3,4 @@ p Predicting the outcome of matches since 2016.
 
 = link_to "Manage Teams", teams_path
 | &nbsp;|&nbsp;
-= link_to "Manage Games", games_path
+= link_to "Manage Games", "/games_admin/games"
