fixing web container and app_component specs

--- a/components/app_component/app/views/app_component/welcome/index.html.slim
+++ b/components/app_component/app/views/app_component/welcome/index.html.slim
@@ -1,6 +1,6 @@
 h1 Welcome to Sportsball!
 p Predicting the outcome of matches since 2016.
 
-= link_to "Manage Teams", teams_path
+= link_to "Manage Teams",  "/teams_admin/teams"
 | &nbsp;|&nbsp;
 = link_to "Manage Games", "/games_admin/games"
