--- a/components/app_component/app/views/layouts/app_component/application.html.slim
+++ b/components/app_component/app/views/layouts/app_component/application.html.slim
@@ -27,7 +27,7 @@ html
 
         section.top-bar-section
           ul.left
-            li =link_to "Teams", "/games_admin/teams"
+            li =link_to "Teams", "/teams_admin/teams"
             li =link_to "Games", "/games_admin/games"
             li =link_to "Predictions", "/app_component/prediction/new"
 
